Improving the styling a little

--- a/index.html
+++ b/index.html
@@ -11,15 +11,29 @@
     <script defer src="/scripts/yamlton.js"></script>
   </head>
   <body>
-    <section class="hero is-primary is-bold">
+    <section class="hero is-info is-bold">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title">
-            yamlton
-          </h1>
-          <h2 class="subtitle">
-            there’s a million things I haven’t done
-          </h2>
+          <div class="level">
+            <div class="level-left">
+              <div>
+                <h1 class="title">
+                  <i class="fas fa-star"></i> yamlton
+                </h1>
+                <h2 class="subtitle">
+                  there’s a million things I haven’t done
+                </h2>
+              </div>
+            </div>
+            <div class="level-right">
+              <a href="https://github.com/razeware/yamlton" class="button" target="_blank">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>View Source</span>
+              </a>
+            </div>
+          </div> 
         </div>
       </div>
     </section>
@@ -55,8 +69,9 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p>
-          <strong>yamlton</strong> from <a href="https://www.raywenderlich.com">raywenderlich.com</a>.
+          <strong>yamlton</strong> from <strong>razeware</strong>, the people behind <a href="https://www.raywenderlich.com">raywenderlich.com</a>
         </p>
+        <p>Powered by <a href="http://nodeca.github.io/js-yaml/" target="_blank">js-yaml</a>, <a href="http://marianoguerra.github.io/json.human.js/" target="_blank">json.human.js</a> and <a href="https://bulma.io" target="_blank">bulma</a></p>
       </div>
     </footer>
   </body>
