--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>yamlton: there's a million things I haven't done</title>
     <meta name="keywords" content="yaml, converter, yamlton, yaml2html, yaml2table, table"/>
-    <meta name="description" content="Convert arbitrary YAML to nest HTML tables with yamlton"/>
+    <meta name="description" content="Convert arbitrary YAML to nested HTML tables with yamlton"/>
+
+    <meta name="og:title" content="yamlton: there's a million things I haven't done"/>
+    <meta name="og:url" content="https://yamlton.razeware.com/"/>
+    <meta name="og:image" content="https://yamlton.razeware.com/favicons/android-chrome-512x512.png"/>
+    <meta name="og:site_name" content="yamlton"/>
+    <meta name="og:description" content="Convert arbitrary YAML to nested HTML tables with yamlton"/>
+
     <link rel="apple-touch-icon" sizes ="180x180" href="/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
