Adding some basic error handling

--- a/quiz.html
+++ b/quiz.html
@@ -65,6 +65,8 @@
 
     <section class="section">
       <div class="container">
+        <div class="notification is-danger is-hidden" id="quiz-error" data-quiz-reset></div>
+        
         <div class="content">
           Use <strong>yamlton</strong> to create Kodeco-format quiz YAML from a spreadsheet table.
         </div>
