Refactoring the controllers

--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg==" crossorigin="anonymous"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js" integrity="sha512-CSBhVREyzHAjAFfBlIBakjoRUKp5h7VSweP0InR/pAJyptH7peuhCsqAI/snV+TwZmXZqoUklpXp6R6wMnYf5Q==" crossorigin="anonymous"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/marked/11.0.0/marked.min.js" integrity="sha512-h8DjSP4Ck/RxwTZ0/uHyZLNzVrmo4qna/mKHedBT0n7wV1KxnR+B/UMqS/hUgIxqPmFnp5mCL0qOCfnq2hTthg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script defer type="module" src="./scripts/markdown_editor_controller.js"></script>
+    <script defer type="module" src="./scripts/controllers.js"></script>
     <script defer src="./scripts/json.human.js"></script>
     <script defer src="./scripts/yamlton.js"></script>
   </head>
