Refactoring into a quiz question controller

--- a/quiz.html
+++ b/quiz.html
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div id="quiz-container" data-controller="quiz-yaml" data-quiz-yaml-questions-value="[]" data-action="markdown-editor:questionUpdated@window->quiz-yaml#questionUpdated">
+    <div id="quiz-container" data-controller="quiz-yaml" data-quiz-yaml-questions-value="[]" data-action="quiz-question:questionUpdated->quiz-yaml#questionUpdated">
       <section class="section">
         <div class="container">
           <div class="notification is-danger is-hidden" id="quiz-error" data-quiz-reset></div>
