Adding a copy success message

--- a/quiz.html
+++ b/quiz.html
@@ -98,6 +98,7 @@
               </span>
               <span>Copy</span>
             </button>
+            <span class="tag is-info is-light is-hidden" data-clipboard-target="flash">Copied!</span>
           </h2>
           <div class="box">
             <pre><code data-quiz-yaml-target="yaml" data-clipboard-target="source"></code></pre>
